--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@types/node": "^20.14.11",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "fastify": "^4.28.1"
   }
 }
